Fixed bug that the top right menu items hidden when code block is too long in get started page

--- a/modules/front-end/src/app/core/components/prism/prism.theme.less
+++ b/modules/front-end/src/app/core/components/prism/prism.theme.less
@@ -36,7 +36,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
   border-radius: 4px;
   background: #1E1E1E;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 /* Inline code */
